# orchestrator

./: .gitignore  AGENT.md  CLAUDE.md  DEVLOG.md  GEMINI.md  README.md  log.md  pyproject.toml  pytest.ini
.beads/: metadata.json
.claude/commands/: README.md  archive.md  backlog-ticket.md  blocked.md  blog-idea.md  breakdown.md  build.md  capture.md  check.md  chore.md  clean-worktree.md  close-out.md  commit.md  conditional_docs.md  document.md  feature.md  fix.md  generate-master-plan.md  generate-tasks.md  handoff.md  implement.md  init-worktree.md  initial-research.md  log-work.md  merge-train.md  new-project.md  next-task.md  next.md  patch.md  plan.md  prepare-next-agent.md  prime.md  process-tasks.md  recap.md  review-PR.md  review-task.md  review-workflow.md  scaffold-project.md  session-recap.md  start-block.md  (+15 more)
.claude/workflows/: execution-plan.schema.json  generate-new-docs.js  harness.schema.json  health-check.js  review-and-merge-tasks-9-12.js  sdlc-block.js  sdlc-flow.js  sdlc-run.js  sdlc-task.js  test-planning.js
app/: .env.example  main.py
app/alembic/: env.py
app/api/: endpoint.py  event_status.py  graph.py  health.py  models.py  router.py  schema_registry.py  security.py
app/core/: schema.py  task.py  validate.py  workflow.py
app/database/: __init__.py  agent_episode.py  brain_document.py  brain_edge.py  chat_session.py  content_chunk.py  eval_record.py  learning_artifact.py  peer.py  repository.py  semantic_memory.py  session.py
app/evals/: __init__.py  gate.py  judge.py  runner.py  scorers.py  slice.py
app/memory/: __init__.py  decay.py  episode_write_service.py  memory_loader_node.py  seams.py  upsert_memory_node.py
app/prompts/: blog_reviser.j2  blog_self_critic.j2  blog_writer.j2  content_summarizer.j2  customer_ticket_response.j2  document_qa_answer.j2  eval_judge.j2  memory_consolidation.j2  memory_ingest_extraction.j2  proposal_opportunity_identifier.j2  proposal_research_brief.j2  proposal_review.j2  proposal_revise.j2  proposal_writer.j2  research_agent_brief.j2  sdlc_generate_tasks.j2  sdlc_implement_task.j2  sdlc_patch_docs.j2  sdlc_review.j2  sdlc_triage.j2  sdlc_wrap_up.j2  sdlc_wrap_up_log.j2  sdlc_wrap_up_report.j2  sdlc_wrap_up_status.j2  translate_ptbr.j2
app/schemas/: content_pipeline_schema.py  document_ingest_schema.py  document_qa_schema.py  memory_schema.py  proposal_generator_schema.py  research_agent_schema.py  sdlc_schema.py
app/services/: __init__.py  article_extraction_service.py  chunking_service.py  embedding_service.py  prompt_loader.py  search_service.py  transcript_service.py  workspace_resolver.py
app/worker/: config.py  tasks.py
app/workflows/: content_pipeline_workflow.py  customer_care_workflow.py  document_ingest_workflow.py  document_qa_workflow.py  memory_consolidation_workflow.py  memory_ingest_workflow.py  proposal_generator_workflow.py  research_agent_workflow.py  sdlc_flow_workflow.py  workflow_registry.py
docker/: .env.example  Caddyfile  Dockerfile.telegram  docker-compose.ai-event-system.yml  docker-compose.yml
docs/: api-reference.md  app-architecture-overview.md  brain-rag.md  claude-agent-sdk.md  configuration.md  data-contract.md  evals.md  getting-started.md  index.md  logfire.md  memory.md  node-model-comparison.md  scripts.md  sdlc-flow-workflow.md  sdlc-workflow-nodes-design.md  sdlc-workflow.md  voyage_ai.md  workflows.md  workspace-contract.md
docs/agentic-workflows/: sdlc-dynamic-workflows.md  sdlc-fix-command.md  sdlc-orchestration.md  sdlc-workflow.md
docs/architecture_review/: agent_node.md  parallel_node.md  prompt_manager.md  router_node.md  task_context.md  workflow.md  workflow_schema.md  workflow_validator.md
integrations/: __init__.py
integrations/telegram/: README.md  __init__.py  bot.py  client.py  config.py
planning/: .template-version  Agentic_Engineering_Projects_and_Learning_Plan.md  Agentic_Plan_Framing_Note.md  BLOG_IDEAS.md  CONTEXT.md  DECISIONS.md  LinkedIn_Return_Post_Builders_Arc.docx  LinkedIn_Return_Post_Retorno_PT.docx  MASTER_PLAN.md  Master_Plan_2026.md  README.md  STATUS.md  Test_Plan.md  context.md  handoff.md  harness.json  index.md  knowledge.md  master-plan.md  memory.md  state.json  status.md
planning/archive/: index.md
planning/blog/: BLOG_IDEAS.md  linkedin-draft-testing-agentic-systems.md
planning/brain-rag/: tasks.md
planning/decisions/: D1-expertise-first.md  D10-public-narrative.md  D11-docs-orientation-vs-state.md  D12-repo-strategy-monorepo.md  index.md  (+33 more)
playground/: visualize_workflow.py  workflow_playground.py
requests/: send_event.py  send_workflow.py
scripts/: emit_task_context_fixture.py  index_brain.py  ingest_repo_log.py  load_brain_edges.py  query_brain.py  refresh_brain.py  run_eval.py
tests/: __init__.py  conftest.py  test_index_brain.py  test_index_brain_workspace.py  test_load_brain_edges.py  test_query_brain.py  test_refresh_brain.py  test_run_eval.py  test_task_context_fixture.py
(+840 files in other folders)
