[project]
name = "ai-event-system"
version = "1.0.0"
description = "AI Event Driven System"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "celery>=5.5.1",
    "fastapi>=0.115.12",
    "instructor>=1.7.9",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.5",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "redis>=5.2.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "freezegun>=1.5",
    "graphviz>=0.20.3",
    "httpx>=0.27",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "nest-asyncio>=1.6.0",
    "pylint>=3.0.0",
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-env>=1.1",
    "pytest-mock>=3.14",
]

[tool.ruff]
exclude = [".venv", "app/core/commands", "app/alembic", ".sh"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (likely bugs and design issues)
]
ignore = [
    "E501",  # line too long — pylint owns this with its own limit
]

[tool.pylint.main]
ignore-paths = ["app/alembic", "app/core/commands"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[project.scripts]
createworkflow = "app.core.commands.init_workflow:main"

[tool.setuptools]
packages = ["app"]
