[project]
name = "ai-event-system"
version = "1.0.0"
description = "AI Event Driven System"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "anthropic>=0.49.0",
    "celery>=5.5.1",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.115.12",
    "firecrawl-py>=4.28.2",
    "instructor>=1.7.9",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.5",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "redis>=5.2.1",
    "tavily-python>=0.7.26",
    "tiktoken>=0.9.0",
    "trafilatura>=2.1.0",
    "uvicorn>=0.34.2",
    "voyageai>=0.4.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "freezegun>=1.5",
    "graphviz>=0.20.3",
    "httpx>=0.27",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "nest-asyncio>=1.6.0",
    "pylint>=3.0.0",
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-env>=1.1",
    "pytest-mock>=3.14",
]

[tool.ruff]
exclude = [
    ".venv",
    "app/core/commands",
    "app/alembic",
    ".sh",
    "app/workflows/customer_care_workflow.py",
    "app/workflows/customer_care_workflow_nodes",
    "app/schemas/customer_care_schema.py",
]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names)
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (likely bugs and design issues)
]
ignore = [
    "E501",   # line too long — pylint owns this with its own limit
    "B008",   # Depends() in arg defaults — standard FastAPI dependency injection pattern
]

[tool.pylint.main]
ignore-paths = [
    "app/alembic",
    "app/core/commands",
    "app/workflows/customer_care_workflow",
    "app/schemas/customer_care_schema",
]

[tool.pylint.design]
max-returns = 10

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "pointless-string-statement",  # docstrings placed after imports — cosmetic, not bugs
]

[project.scripts]
createworkflow = "app.core.commands.init_workflow:main"

[tool.setuptools]
packages = ["app"]
